@@ -245,10 +245,13 @@ bool ZeroLeptonCRZ::processEvent(xAOD::TEvent& event)
   if(! m_IsTruth){  
     bool passEltrigger=false;
     bool passMutrigger=false;
-    if((int)eventInfo->auxdata<char>("HLT_e24_lhmedium_iloose_L1EM18VH")==1 || (int)eventInfo->auxdata<char>("HLT_e60_lhmedium")==1) passEltrigger = true;
-    if((int)eventInfo->auxdata<char>("HLT_mu20_iloose_L1MU15")==1 || (int)eventInfo->auxdata<char>("HLT_mu50")==1) passMutrigger = true;
-    //if((int)eventInfo->auxdata<char>("HLT_e17_lhloose_L1EM15")==1 || (int)eventInfo->auxdata<char>("HLT_e17_loose_L1EM15")==1) passEltrigger = true;
-    //if((int)eventInfo->auxdata<char>("HLT_mu14_iloose")==1 || (int)eventInfo->auxdata<char>("HLT_mu18")==1) passMutrigger = true; 
+    if((int)eventInfo->auxdata<char>("HLT_e24_lhmedium_iloose_L1EM18VH")==1 || 
+       (int)eventInfo->auxdata<char>("HLT_e24_lhmedium_iloose_L1EM20VH")==1  || 
+       (int)eventInfo->auxdata<char>("HLT_e60_lhmedium")==1) 
+      passEltrigger = true;
+    if((int)eventInfo->auxdata<char>("HLT_mu20_iloose_L1MU15")==1 || 
+       (int)eventInfo->auxdata<char>("HLT_mu50")==1) 
+      passMutrigger = true;
     if( !(passEltrigger || passMutrigger) ) return true; 
   }
 
